--- a/src/Cake.Terraform/Cake.Terraform.csproj
+++ b/src/Cake.Terraform/Cake.Terraform.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <CodeAnalysisRuleSet>..\.sonarlint\cake.terraformcsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="..\.sonarlint\cake.terraform\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Cake.Core" PrivateAssets="All">
-      <Version>0.33.0</Version>
+      <Version>0.38.5</Version>
     </PackageReference>
   </ItemGroup>
 
